# ColorReducer

./: README.md  raw_to_video.py  video_to_raw.py
examples/: sources.txt
src/: CMakeLists.txt  audioreducer.c  audioreducer.h  colorreducer.c  colorreducer.h  kmeans.c  kmeans.h  main.c  rawreducer.c  rawreducer.h  textreducer.c  textreducer.h  version.h  voronoi.c  voronoi.h
src/utils/: CMakeLists.txt
src/utils/containers/: CMakeLists.txt  kdtree.c  kdtree.h
src/utils/filetypes/: CMakeLists.txt  audio.c  audio.h  image.c  image.h
src/utils/math/: CMakeLists.txt  rand.c  rand.h
src/utils/misc/: CMakeLists.txt  args.c  args.h  arrays.c  arrays.h  color.c  color.h  error.c  error.h  types.h  types_exact.h
